2003-10-19  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Mention Tecgraf PUC-Rio and their
	copyright.
	* Makefile.am: Mention circular buffer stuff.
	* configure.ac, NEWS: Mention 0.6 release.
	* cert.hh, cert.cc (erase_bogus_certs): file<cert> variant.	
	* commands.cc (log): Erase bogus certs before writing,
	cache comment-less file IDs.
	* monotone.spec: Don't specify install-info args,
	do build with optimization on RHL.

2003-10-19  Matt Kraai  <kraai@ftbfs.org>

	* commands.cc (merge): Use app.branch_name instead of args[0] for
	the branch name.

2003-10-17  graydon hoare  <graydon@pobox.com>

	* commands.cc (log): New command.
	Various other bug fixes.
	* monotone.1, monotone.texi: Minor updates.

2003-10-17  graydon hoare  <graydon@pobox.com>

	* monotone.texi: Expand command and hook references.
	* commands.cc: Disable db dump / load commands for now.

2003-10-16  graydon hoare  <graydon@pobox.com>

	* sanity.hh: Add a const version of idx().
	* diff_patch.cc: Change to using idx() everywhere.
	* cert.cc (find_common_ancestor): Rewrite to recursive
	form, stepping over historic merges.
	* tests/t_cross.at: New test for merging merges.
	* testsuite.at: Call t_cross.at.

2003-10-10  graydon hoare  <graydon@pobox.com>

	* lua.hh, lua.cc (hook_apply_attribute): New hook.
	* work.hh, work.cc (apply_attributes): New function.
	* commands.cc (update_any_attrs): Update attrs when writing to
	working copy. 
	* std_hooks.lua (temp_file): Use some env vars.
	(attr_functions): Make table of attr-setting functions.

2003-10-10  graydon hoare  <graydon@pobox.com>

	* work.cc: Fix add/drop inversion bug.
	* lua/*.{c,h}: Import lua 5.0 sources.
	* lua.cc: Rewrite lua interface completely. 	
	* std_hooks.lua, test_hooks.lua, testsuite,
	tests/t_persist_phrase.at, configure.ac, config.h.in, Makefile.am:
	Modify to handle presence of lua 5.0.

2003-10-08  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc: Attach aux certs to child, not parent.