@@ -1,3 +1,8 @@
+2003-10-20  graydon hoare  <graydon@pobox.com>
+
+	* rcs_import.cc (import_cvs_repo): Check key existence
+	at beginning of import pass, to avoid wasted work.
+
 2003-10-19  graydon hoare  <graydon@pobox.com>
 
 	* AUTHORS: Mention Tecgraf PUC-Rio and their
